make-stderr.out
hw1.cc: In member function ‘void Solver::explore()’:
hw1.cc:694:33: error: request for member ‘get_state’ in ‘((Solver*)this)->Solver::map’, which is of pointer type ‘Map*’ (maybe you meant to use ‘->’ ?)
  694 |         nextStateQueue.push(map.get_state());
      |                                 ^~~~~~~~~
hw1.cc:702:43: error: cannot convert ‘std::unordered_map<std::bitset<64>, Solver::PosNode*>*’ to ‘std::unordered_map<std::bitset<64>, PosNode*>*’
  702 |             add_visited_state(&vstdStTbl, &vstdClidStTbl, state);
      |                                           ^~~~~~~~~~~~~~
      |                                           |
      |                                           std::unordered_map<std::bitset<64>, Solver::PosNode*>*
hw1.cc:723:65: note:   initializing argument 2 of ‘void Solver::add_visited_state(std::unordered_map<std::bitset<64>, Pos>*, std::unordered_map<std::bitset<64>, PosNode*>*, State)’
  723 |                     unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl, State state){
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
hw1.cc:705:13: error: ‘get_available_actions’ was not declared in this scope
  705 |             get_available_actions(state, &action_list);
      |             ^~~~~~~~~~~~~~~~~~~~~
hw1.cc:712:17: error: expected ‘;’ before ‘if’
  712 |                 if(map->is_done(nextState)){done = true; break;}
      |                 ^~
hw1.cc:714:50: error: cannot convert ‘std::unordered_map<std::bitset<64>, Solver::PosNode*>*’ to ‘std::unordered_map<std::bitset<64>, PosNode*>*’
  714 |                 if(!is_state_visited(&vstdStTbl, &vstdClidStTbl, nextState)){
      |                                                  ^~~~~~~~~~~~~~
      |                                                  |
      |                                                  std::unordered_map<std::bitset<64>, Solver::PosNode*>*
hw1.cc:758:65: note:   initializing argument 2 of ‘bool Solver::is_state_visited(std::unordered_map<std::bitset<64>, Pos>*, std::unordered_map<std::bitset<64>, PosNode*>*, State)’
  758 |                     unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl, State state){
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
hw1.cc: In member function ‘void Solver::add_visited_state(std::unordered_map<std::bitset<64>, Pos>*, std::unordered_map<std::bitset<64>, PosNode*>*, State)’:
hw1.cc:729:29: error: cannot convert ‘std::unordered_map<std::bitset<64>, Pos>**’ to ‘std::unordered_map<std::bitset<64>, Pos>*’
  729 |         if(!is_in_vstdStTbl(&vstdStTbl, state.boxPos)){ // not inside.
      |                             ^~~~~~~~~~
      |                             |
      |                             std::unordered_map<std::bitset<64>, Pos>**
hw1.cc:801:58: note:   initializing argument 1 of ‘bool Solver::is_in_vstdStTbl(std::unordered_map<std::bitset<64>, Pos>*, std::bitset<64>)’
  801 |     bool is_in_vstdStTbl(unordered_map<bitset<64>, Pos> *vstdStTbl, bitset<64> boxPos){
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
hw1.cc:732:28: error: cannot convert ‘std::unordered_map<std::bitset<64>, PosNode*>**’ to ‘std::unordered_map<std::bitset<64>, PosNode*>*’
  732 |             insert_PosNode(&vstdClidStTbl, state);
      |                            ^~~~~~~~~~~~~~
      |                            |
      |                            std::unordered_map<std::bitset<64>, PosNode*>**
hw1.cc:737:69: note:   initializing argument 1 of ‘void Solver::insert_PosNode(std::unordered_map<std::bitset<64>, PosNode*>*, State)’
  737 |     void insert_PosNode(unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl, State state){
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
hw1.cc: In member function ‘void Solver::insert_PosNode(std::unordered_map<std::bitset<64>, PosNode*>*, State)’:
hw1.cc:746:33: error: cannot convert ‘std::unordered_map<std::bitset<64>, PosNode*>**’ to ‘std::unordered_map<std::bitset<64>, PosNode*>*’
  746 |         if(!is_in_vstdClidStTbl(&vstdClidStTbl, state.boxPos)){
      |                                 ^~~~~~~~~~~~~~
      |                                 |
      |                                 std::unordered_map<std::bitset<64>, PosNode*>**
hw1.cc:795:74: note:   initializing argument 1 of ‘bool Solver::is_in_vstdClidStTbl(std::unordered_map<std::bitset<64>, PosNode*>*, std::bitset<64>)’
  795 |     bool is_in_vstdClidStTbl(unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl,
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
hw1.cc:750:54: error: cannot convert ‘std::unordered_map<std::bitset<64>, PosNode*>::mapped_type’ {aka ‘PosNode*’} to ‘Solver::PosNode*’ in assignment
  750 |             cur->next = (*vstdClidStTbl)[state.boxPos];
      |                                                      ^
hw1.cc:723:54: note: class type ‘PosNode’ is incomplete
  723 |                     unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl, State state){
      |                                                      ^~~~~~~
hw1.cc:753:42: error: cannot convert ‘Solver::PosNode*’ to ‘std::unordered_map<std::bitset<64>, PosNode*>::mapped_type’ {aka ‘PosNode*’} in assignment
  753 |         (*vstdClidStTbl)[state.boxPos] = cur;
      |                                          ^~~
      |                                          |
      |                                          Solver::PosNode*
hw1.cc: In member function ‘bool Solver::is_state_visited(std::unordered_map<std::bitset<64>, Pos>*, std::unordered_map<std::bitset<64>, PosNode*>*, State)’:
hw1.cc:761:29: error: cannot convert ‘std::unordered_map<std::bitset<64>, Pos>**’ to ‘std::unordered_map<std::bitset<64>, Pos>*’
  761 |         if(!is_in_vstdStTbl(&vstdStTbl, state.boxPos)){return false;}
      |                             ^~~~~~~~~~
      |                             |
      |                             std::unordered_map<std::bitset<64>, Pos>**
hw1.cc:801:58: note:   initializing argument 1 of ‘bool Solver::is_in_vstdStTbl(std::unordered_map<std::bitset<64>, Pos>*, std::bitset<64>)’
  801 |     bool is_in_vstdStTbl(unordered_map<bitset<64>, Pos> *vstdStTbl, bitset<64> boxPos){
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
hw1.cc:774:33: error: cannot convert ‘std::unordered_map<std::bitset<64>, PosNode*>**’ to ‘std::unordered_map<std::bitset<64>, PosNode*>*’
  774 |         if(!is_in_vstdClidStTbl(&vstdClidStTbl, state.boxPos)){return false;}
      |                                 ^~~~~~~~~~~~~~
      |                                 |
      |                                 std::unordered_map<std::bitset<64>, PosNode*>**
hw1.cc:795:74: note:   initializing argument 1 of ‘bool Solver::is_in_vstdClidStTbl(std::unordered_map<std::bitset<64>, PosNode*>*, std::bitset<64>)’
  795 |     bool is_in_vstdClidStTbl(unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl,
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
hw1.cc:778:57: error: cannot convert ‘std::unordered_map<std::bitset<64>, PosNode*>::mapped_type’ {aka ‘PosNode*’} to ‘Solver::PosNode*’ in initialization
  778 |         PosNode *cur_ptr = (*vstdClidStTbl)[state.boxPos];
      |                                                         ^
hw1.cc:723:54: note: class type ‘PosNode’ is incomplete
  723 |                     unordered_map<bitset<64>, struct PosNode*> *vstdClidStTbl, State state){
      |                                                      ^~~~~~~
make: *** [<builtin>: hw1] Error 1
